add lock_version field

--- a/store/app/views/products/_form.html.erb
+++ b/store/app/views/products/_form.html.erb
@@ -10,6 +10,8 @@
     </div>
   <% end %>
 
+  <%= f.hidden_field :lock_version %>
+
   <div class="field">
     <%= f.label :name %><br />
     <%= f.text_field :name %>
